# overlapintegrals

./: .travis.yml  LICENSE  README.md  run_benchmarks.sh  run_tests.sh  setup.cfg
.github/: CONTRIBUTING.md
cl/: overlapintegrals.lisp
cpp/: CMakeLists.txt  main.cpp
devtools/conda-recipe/: meta.yaml
docs/: Makefile  index.rst  make.bat
julia/: overlapintegrals.jl  test_overlapintegrals.jl
julia/OverlapIntegrals/: LICENSE  Project.toml  README.md
julia/OverlapIntegrals/src/: OverlapIntegrals.jl
julia/OverlapIntegrals/test/: bench.jl  runtests.jl
nim/: .gitignore  bench.nim  overlapintegrals.nim  test_utils.nim
overlapintegrals/: __init__.py  overlapintegrals.py  sympy_exprs.py
overlapintegrals/tests/: test_overlapintegrals.py
python/: .lgtm.yml  .travis.yml  appveyor.yml  setup.cfg  setup.py
python/devtools/: README.md
python/docs/: README.md  conf.py
python/overlapintegrals/: __init__.py  _version.py  overlapintegrals.py
python/overlapintegrals/tests/: test_implementation.py  test_overlapintegrals.py  test_sympy_exprs.py
racket/: implementation-test.rkt  overlapintegrals-test.rkt  overlapintegrals.rkt
rust/overlapintegrals/: Cargo.toml
rust/overlapintegrals/src/: lib.rs
